preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-preview

spec:
  selector:
    app: myapp

  ports:
  - port: 80
    targetPort: 80
