service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp

  ports:
  - port: 80
    targetPort: 80
